syntax = "proto3";

package todo;

option go_package = "github.com/example/path/gen;gen";

import "google/protobuf/timestamp.proto";
import "proto/google/api/annotations.proto";

service ToDoService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post : "/{api}/todo/create"
      body : "toDo"
    };
  };

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get : "/{api}/todo/{id}"
    };
  };

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put : "/{api}/todo/{toDo.id}"
      body : "toDo"
    };
  };

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete : "/{api}/todo/{id}"
    };
  };

  rpc ReadAll(ReadAllRequest) returns (stream ReadAllResponse) {
    option (google.api.http) = {
      get : "/{api}/todo/all"
    };
  };
}

message ToDo {
  string id = 1;
  string title = 2;
  string description = 3;

  google.protobuf.Timestamp insert_at = 4;
  google.protobuf.Timestamp update_at = 5;
}

message CreateRequest {
  string api = 1;
  ToDo toDo = 2;
}

message CreateResponse {
  string api = 1;
  string id = 2;
}

message ReadRequest {
  string api = 1;
  string id = 2;
}

message ReadResponse {
  string api = 1;
  ToDo toDo = 2;
}

message UpdateRequest {
  string api = 1;
  ToDo toDo = 2;
}

message UpdateResponse {
  string api = 1;
  string updated = 2;
}

message DeleteRequest {
  string api = 1;
  string id = 2;
}

message DeleteResponse {
  string api = 1;
  string deleted = 2;
}

message ReadAllRequest { string api = 1; }

message ReadAllResponse { ToDo toDo = 2; }
